Grab CSS files from development branch on github.

--- a/style.html
+++ b/style.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <title>Stylish!</title>
-<link rel="stylesheet" href="/media/css/sandstone.css">
-<link rel="stylesheet" href="/media/css/wpm.css">
+<link rel="stylesheet" href="https://raw.github.com/stenington/webpagemaker/development/media/css/sandstone.css">
+<link rel="stylesheet" href="https://raw.github.com/stenington/webpagemaker/development/media/css/wpm.css">
 <style>
   .showgrid .row {
     margin-bottom: 20px;
   }
   .showgrid [class*="span"] {
-    background: url(/media/img/diagonal-noise.png);
+    background: #ddd;
     text-align: center;
   }
 
