--- a/index.html
+++ b/index.html
@@ -189,66 +189,135 @@
       <script src="./media/js/jquery.js"></script>
       <script src="./media/js/projects.js"></script>
       <div class="decontain">
-      <div class="container light-bg">
-      <figure>
-        <div class="row">
-          <div class="span10 view-style">                       
-            View as:                                            
-            <ul>
-              <li><a id="js-list" class="list">List</a></li>                                             
-              <li><a id="js-thumbs" class="thumbs">Thumbnails</a></li>                                             
-            </ul>                                               
-          </div>                                                
+        <div class="container backdrop">
+          <figure>
+            <div class="row">
+              <div class="span10 view-style">                       
+                View as:                                            
+                <ul>
+                  <li><a id="js-list" class="list">List</a></li>                                             
+                  <li><a id="js-thumbs" class="thumbs">Thumbnails</a></li>                                             
+                </ul>                                               
+              </div>                                                
+            </div>
+            <ul class="projects show-list">
+              <li class="project">                                                              
+                <div class="thumb">                                                             
+                  <a href="#">                                                        
+                    <img src="http://placehold.it/212x130" alt="title">                                   
+                  </a>
+                  <div class="caption">
+                    <p>By author</p>                                                    
+                  </div>                                                                      
+                </div>
+                <div class="info">
+                  <h3 class="title">Coffee is great</h3>
+                  <p class="description">
+                    Blue mountain, that grounds skinny caramelization a that iced. Brewed crema 
+                    strong and organic, strong and whipped skinny turkish. Iced, shop spoon fair 
+                    trade robust lungo black americano percolator. Est strong siphon carajillo that dripper dark.
+                  </p>
+                  <p><a href="#" class="button-blue">Make project</a>
+                </div>
+              </li>
+              <li class="project">                                                              
+                <div class="thumb">                                                             
+                  <a href="#">                                                        
+                    <img src="http://placehold.it/212x130" alt="title">                                   
+                  </a>
+                  <div class="caption">
+                    <p>By author</p>                                                    
+                  </div>                                                                      
+                </div>
+                <div class="info">
+                  <h3 class="title">It's very tasty</h3>
+                  <p class="description">
+                    Bar single origin grounds java id sweet coffee ristretto. Cream, instant, pumpkin 
+                    spice viennese strong black sweet est decaffeinated mocha.
+                  </p>
+                  <p><a href="#" class="button-blue">Make project</a>
+                </div>
+              </li>
+            </ul>
+            <p style="clear:left;">
+              Note that this has to <code>clear:left</code> for the thumb view. 
+              Maybe we want to <em class="todo">add a clearfix</em>?
+            </p>
+          </figure>
         </div>
-        <ul class="projects show-list">
-          <li class="project">                                                              
-            <div class="thumb">                                                             
-              <a href="#">                                                        
-                <img src="http://placehold.it/212x130" alt="title">                                   
-              </a>
-              <div class="caption">
-                <p>By author</p>                                                    
-              </div>                                                                      
-            </div>
-            <div class="info">
-              <h3 class="title">Coffee is great</h3>
-              <p class="description">
-                Blue mountain, that grounds skinny caramelization a that iced. Brewed crema 
-                strong and organic, strong and whipped skinny turkish. Iced, shop spoon fair 
-                trade robust lungo black americano percolator. Est strong siphon carajillo that dripper dark.
-              </p>
-              <p><a href="#" class="button-blue">Make project</a>
-            </div>
-          </li>
-          <li class="project">                                                              
-            <div class="thumb">                                                             
-              <a href="#">                                                        
-                <img src="http://placehold.it/212x130" alt="title">                                   
-              </a>
-              <div class="caption">
-                <p>By author</p>                                                    
-              </div>                                                                      
-            </div>
-            <div class="info">
-              <h3 class="title">It's very tasty</h3>
-              <p class="description">
-                Bar single origin grounds java id sweet coffee ristretto. Cream, instant, pumpkin 
-                spice viennese strong black sweet est decaffeinated mocha.
-              </p>
-              <p><a href="#" class="button-blue">Make project</a>
-            </div>
-          </li>
-        </ul>
-        <p style="clear:left;">
-          Note that this has to <code>clear:left</code> for the thumb view. 
-          Maybe we want to <em class="todo">add a clearfix</em>?
-        </p>
-      </figure>
-      </div>
       </div>
     </section>
     <section>
       <h2>Gallery page</h2>
+      <p>The gallery page is a bit simpler.</p>
+      <div class="decontain">
+        <div class="container backdrop">
+          <figure>
+            <ul class="thumbnails">
+              <li class="span3 threeColumn">                        
+                <div class="thumbnail">                             
+                  <a href="#">                             
+                    <img src="http://placehold.it/252x175" alt="">                    
+                  </a>                                              
+                  <div class="caption">                             
+                    <h5 class="title">I made this!</h5>              
+                    <p>By Some Author</p>                          
+                  </div>                                            
+                  <a href="#" class="button button-orange">Remix</a>
+                </div>                                              
+              </li>                                                 
+              <li class="span3 threeColumn">                        
+                <div class="thumbnail">                             
+                  <a href="#">                             
+                    <img src="http://placehold.it/252x175" alt="">                    
+                  </a>                                              
+                  <div class="caption">                             
+                    <h5 class="title">I made this!</h5>              
+                    <p>By Some Author</p>                          
+                  </div>                                            
+                  <a href="#" class="button button-orange">Remix</a>
+                </div>                                              
+              </li>                                                 
+              <li class="span3 threeColumn">                        
+                <div class="thumbnail">                             
+                  <a href="#">                             
+                    <img src="http://placehold.it/252x175" alt="">                    
+                  </a>                                              
+                  <div class="caption">                             
+                    <h5 class="title">I made this!</h5>              
+                    <p>By Some Author</p>                          
+                  </div>                                            
+                  <a href="#" class="button button-orange">Remix</a>
+                </div>                                              
+              </li>                                                 
+              <li class="span3 threeColumn">                        
+                <div class="thumbnail">                             
+                  <a href="#">                             
+                    <img src="http://placehold.it/252x175" alt="">                    
+                  </a>                                              
+                  <div class="caption">                             
+                    <h5 class="title">I made this!</h5>              
+                    <p>By Some Author</p>                          
+                  </div>                                            
+                  <a href="#" class="button button-orange">Remix</a>
+                </div>                                              
+              </li>                                                 
+              <li class="span3 threeColumn">                        
+                <div class="thumbnail">                             
+                  <a href="#">                             
+                    <img src="http://placehold.it/252x175" alt="">                    
+                  </a>                                              
+                  <div class="caption">                             
+                    <h5 class="title">I made this!</h5>              
+                    <p>By Some Author</p>                          
+                  </div>                                            
+                  <a href="#" class="button button-orange">Remix</a>
+                </div>                                              
+              </li>                                                 
+            </ul>  
+          </figure>
+        </div>
+      </div>
     </section>
   </section>
 <!--
