Added a footer example, fixed some example page titles.

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Up top</title>
+  <title>Down low</title>
   <link rel="stylesheet" href="./media/css/sandstone.css">
   <link rel="stylesheet" href="./media/css/wpm.css">
   <link href="//www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet" />
@@ -11,23 +11,19 @@
       /* We have to relativize the url for gh-pages, which is lame. */
       background: #FCF7ED url("./media/img/mozorg-gradient.png") repeat-x 0 0; 
     }
-    #outer-wrapper {
-      border-top: 2px solid white !important;
-    }
   </style>
 </head>
 <body>
   <div id="outer-wrapper">
     <div id="wrapper">
-      <section id="header">
-        <a href="http://www.mozilla.org/" id="tabzilla">mozilla</a>
-        <!-- Force some visual height so you can see the header. -->
-        <div style="height: 70px;"></div>
-      </section>
       <!-- Force some visual height so you can see the gradient background. -->
       <div style="height: 220px;"></div>
+      <section id="page-bottom">
+        <footer id="colophon" style="text-align:center;">
+          <h2>Your footer content here</h2>
+        </footer>
+      </section>
     </div>
   </div>
-  <script src="//www.mozilla.org/tabzilla/media/js/tabzilla.js"></script>
 </body>
 </html>
