--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@
         </div>
       </figure>
       
+      <figure class="pt">
+        <iframe src="footer.html" width="100%" height="300px"></iframe>
+        <figcaption><a href="footer.html">Click here</a> to see the example by itself.</figcaption>
+      </figure>
     </section>
   </section>
 
