--- a/styleguide/nav/nav-home.html
+++ b/styleguide/nav/nav-home.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Site nav for fun and profit</title>
-  <link rel="stylesheet" href="../media/css/sandstone.css">
-  <link rel="stylesheet" href="../media/css/wpm.css">
+  <link rel="stylesheet" href="../../media/css/sandstone.css">
+  <link rel="stylesheet" href="../../media/css/wpm.css">
 </head>
 <body id="home">
   <section id="masthead">
