--- a/index.html
+++ b/index.html
@@ -1,433 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Stylish!</title>
-  <link rel="stylesheet" href="./media/css/opensans/stylesheet.css">
-  <link rel="stylesheet" href="./media/css/sandstone.css">
-  <link rel="stylesheet" href="./media/css/wpm.css">
-  <link rel="stylesheet" href="./media/css/style.css">
-</head>
-<body>
-  <section class="container divider showgrid">
-    <h1>The grid</h1>
-    <section>
-      <h2>Columns</h2>
-      <p>The grid is a bit odd. Sandstone seems to use a <a href="javascript:(function()%7Bwindow.javascriptgrid=%7Bcolumns:%7B%22default%22:%7Bcolumns:10%7D%7D,columnWidth:68,gapWidth:24%7D;var%20script=document.createElement('script');script.src='http://jsg.javascriptgrid.org/jsg.js';document.getElementsByTagName('HEAD')%5B0%5D.appendChild(script);%7D)();">Less 10-column grid</a> with <a href="javascript:/*_DRAG_ME_INTO_YOUR_BOOKMARK_BAR_*/(function()%7Bwindow.javascriptgrid=%7Bcolumns:%7B%22default%22:%7Bcolumns:12%7D%7D,columnWidth:60,gapWidth:20%7D;var%20script=document.createElement('script');script.src='http://jsg.javascriptgrid.org/jsg.js';document.getElementsByTagName('HEAD')%5B0%5D.appendChild(script);%7D)();">Bootstrap 12-column</a> <code>.span*</code> helpers.</p>
-      <div class="row">
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-        <div class="span1">1</div>
-      </div>
-      <div class="row">
-        <div class="span2">2</div>
-        <div class="span2">2</div>
-        <div class="span2">2</div>
-        <div class="span2">2</div>
-        <div class="span2">2</div>
-      </div>
-      <div class="row">
-        <div class="span3">3</div>
-        <div class="span3">3</div>
-        <div class="span3">3</div>
-      </div>
-      <div class="row">
-        <div class="span4">4</div>
-        <div class="span4">4</div>
-      </div>
-      <div class="row">
-        <div class="span5">5</div>
-        <div class="span5">5</div>
-      </div>
-      <div class="row">
-        <div class="span6">6</div>
-      </div>
-      <div class="row">
-        <div class="span7">7</div>
-      </div>
-      <div class="row">
-        <div class="span8">8</div>
-      </div>
-      <div class="row">
-        <div class="span9">9</div>
-      </div>
-      <div class="row">
-        <div class="span10">10</div>
-      </div>
-      <div class="row"> 
-        <div class="span11">11<sup>*</sup></div>
-      </div>
-      <div class="row"> 
-        <div class="span12">12<sup>*</sup></div>
-      </div>
-      <small>* wat?</small>
-    </section>
-    <section>
-      <h2>Centered thirds</h2>
-      <p>Adding <code>.threeColumn</code> to <code>.span3</code> columns adjusts the spacing to divide the layout width evenly.</p>
-      <div class="row">
-        <div class="span10 fade">10</div>
-      </div>
-      <div class="row">
-        <div class="span3 threeColumn">3</div>
-        <div class="span3 threeColumn">3</div>
-        <div class="span3 threeColumn">3</div>
-      </div>
-      <div class="row">
-        <div class="span10 fade">10</div>
-      </div>
-    </section>
-    <section>
-      <h2>Offsets</h2>
-      <p>Offsets work like in Bootstrap.</p>
-      <div class="row">
-        <div class="span1 offset1">offset 1</div>
-        <div class="span1 offset2">offset 2</div>
-        <div class="span1 offset3">offset 3</div>
-      </div>
-      <div class="row">
-        <div class="span1 offset9">offset 9</div>
-      </div>
-    </section>
-  </section>
+<title>Move along</title>
+<script>
+  window.location = "styleguide/";
+</script>
 
-  <section class="container divider">
-    <h1>Structural elements</h1>
-    <p> I'm not 100% sure what's going on with all of these, but here they are.
-    </p>
-    <section>
-      <h2>Wrappers</h2>
-      <p> <a href="https://github.com/mozilla/tabzilla">Tabzilla</a> demands that:
-      </p>
-      <ol>
-        <li> Background images must not be attached to the <body> element. </li>
-        <li> Absolutely positioned elements must not be positioned relative to the <body> element. </li>
-        <li> An element other than the <body> should add a 2 pixel white border to the top of the page 
-             (<code>border-top: 2px solid #fff;</code>)
-        </li>
-      </ol>
-      <p> We use two wrapper divs&mdash;<code>#outer-wrapper</code> and <code>#wrapper</code>&mdash;to satisfy the requirements.
-          Except currently the <code>#outer-wrapper</code> code is <em class="todo">broken</em>, so there's no top border. Oops!
-      </p>
-      <p> Attach background images to <code>#wrapper</code>. Notice that the background moves down as tabzilla opens. 
-      </p>
-      <figure>
-        <iframe src="wrappers.html" width="100%" height="300px"></iframe>
-        <figcaption><a href="wrappers.html">Click here</a> to see the example by itself.</figcaption>
-      </figure>
-    </section>
-    <section>
-      <h2>Header</h2>
-      <p>
-        The header is a bit verbosely defined, as seen on the left. The right-hand alternative 
-        <em class="todo">might be preferable</em>:
-      </p>
-      <figure>
-        <div class="row">
-          <div class="span5 backdrop">
-            <h3>Current</h3>
-            <code><pre>
-  &lt;section id="header"&gt;
-    &lt;header id="masthead"&gt;
-      &lt;div class="row"&gt;
-        &lt;div class="span10"&gt;
-          ...
-        &lt;/div&gt;
-      &lt;/div&gt;
-    &lt;/header&gt;
-  &lt;/section&gt;</pre></code> 
-          </div>
-          <div class="span5 backdrop">
-            <h3>Better?</h3>
-            <code><pre>
-  &lt;header&gt;
-    &lt;div id="masthead"&gt;
-      ...
-    &lt;/div&gt;
-  &lt;/header&gt;</code></pre>
-          </div>
-        </div>
-      </figure>
-      <p class="pt">
-        I think the <em class="todo"><code>.row</code> and <code>.span10</code> can be dropped,</em> but I'm not sure. 
-        The <code>section</code> applies the page-width visual styles because <code>#masthead</code> acts like a
-        <code>.container</code> in Sandstone.
-      </p>
-      <p>
-        Also, the header <em class="todo">box-shadow interferes a little with Tabzilla</em> when a top border is 
-        actually in place. There shouldn't be a gray dividing line.
-      </p>
-      <figure>
-        <iframe src="header.html" width="100%" height="300px"></iframe>
-        <figcaption><a href="header.html">Click here</a> to see the example by itself.</figcaption>
-      </figure>
-    </section>
-    <section>
-      <h2>Containers and rows</h2>
-      <p> <code>.container</code> divs are a non-responsive fixed width.
-          <code>.row</code> divs provide a negative margin to properly align their <code>.span*</code> divs.
-          (You can plonk content straight in a <code>.container</code>, but not a <code>.row</code>
-          without alignment issues.)
-      </p>
-      <div class="showlayout decontain">
-        <div class="container">
-          <code>.container</code> 
-          <div class="row">
-            <code>.row</code>
-            <div class="span10">
-              <code>.span10</code>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section>
-      <h2>Dividers</h2>
-      <div class="decontain">
-        <div class="container divider">
-          <p> This <code>.container</code> is also a <code>.divider</code>, which means there's spacing and 
-              a horizontal rule below here...
-          </p>
-        </div>
-        <div class="container">
-          <p> ...and above here. I thought there was supposed to be only a single container per page though, so 
-              I'm a bit confused.
-          </p>
-        </div>
-      </div>
-    </section>
-    <section>
-      <h2>Footer</h2>
-      <p>
-        Like the header, the footer's <em class="todo">a bit noisy</em> though not quite as bad. (It actually 
-        uses the <code>.row</code> to contain several columns.)
-      </p>
-      <figure>
-        <div class="row">
-          <div class="span5 backdrop">
-            <h3>Current</h3>
-            <code><pre>
-  &lt;section id="page-bottom"&gt;
-    &lt;footer id="colophon"&gt;
-      ...
-    &lt;/footer&gt;
-  &lt;/section&gt;</pre></code> 
-          </div>
-          <div class="span5 backdrop">
-            <h3>Better?</h3>
-            <code><pre>
-  &lt;footer&gt;
-    &lt;div id="colophon"&gt;
-      ...
-    &lt;/div&gt;
-  &lt;/footer&gt;</code></pre>
-          </div>
-        </div>
-      </figure>
-      
-      <figure class="pt">
-        <iframe src="footer.html" width="100%" height="300px"></iframe>
-        <figcaption><a href="footer.html">Click here</a> to see the example by itself.</figcaption>
-      </figure>
-    </section>
-  </section>
-
-  <section class="container divider">
-    <h1>Site navigation</h1>
-    <p> Site nav is not particularly high tech. Each page sets its own <code>id</code> on the <code>body</code> tag,
-        and CSS selectors take over from there. We don't expect a lot of new pages, or something fancier and 
-        javascriptier could have been done.
-    </p>
-    <figure>
-      <iframe src="nav/nav-home.html" width="100%" height="300px"></iframe>
-      <figcaption><a href="nav/nav-home.html">Click here</a> to see the example by itself.</figcaption>
-    </figure>
-  </section>
-
-  <section class="container divider">
-    <h1>Gallery viewing</h1>
-    <p>
-      Thimble <s>has</s> will have two galleries&mdash;Projects and Gallery&mdash;for 
-      learning projects and user creations respectively. They each look a little different.
-      The markup for both is Bootstrap-inspired, though Bootstrap probably does extra cool
-      things I don't know about and didn't steal.
-    <section>
-      <h2>Projects page</h2>
-      <p>
-        The Projects gallery has both list and thumbnail views, togglable by setting
-        <code>.show-list</code> or <code>.show-thumbs</code> on the containing
-        <code>&lt;ul class="projects"&gt;</code>. <code>projects.js</code> will do that for you
-        in a very basic sort of way, if you have jQuery already included on the page. (Should
-        probably <em class="todo">remove the <code>console.log()</code> debug</em> though.)
-      </p>
-      <script src="./media/js/jquery.js"></script>
-      <script src="./media/js/projects.js"></script>
-      <div class="decontain container backdrop">
-        <figure>
-          <div class="row">
-            <div class="span10 view-style">                       
-              View as:                                            
-              <ul>
-                <li><a id="js-list" class="list">List</a></li>                                             
-                <li><a id="js-thumbs" class="thumbs">Thumbnails</a></li>                                             
-              </ul>                                               
-            </div>                                                
-          </div>
-          <ul class="projects show-list">
-            <li class="project">                                                              
-              <div class="thumb">                                                             
-                <a href="#">                                                        
-                  <img src="http://placehold.it/212x130" alt="title">                                   
-                </a>
-                <div class="caption">
-                  <p>By author</p>                                                    
-                </div>                                                                      
-              </div>
-              <div class="info">
-                <h3 class="title">Coffee is great</h3>
-                <p class="description">
-                  Blue mountain, that grounds skinny caramelization a that iced. Brewed crema 
-                  strong and organic, strong and whipped skinny turkish. Iced, shop spoon fair 
-                  trade robust lungo black americano percolator. Est strong siphon carajillo that dripper dark.
-                </p>
-                <p><a href="#" class="button-blue">Make project</a>
-              </div>
-            </li>
-            <li class="project">                                                              
-              <div class="thumb">                                                             
-                <a href="#">                                                        
-                  <img src="http://placehold.it/212x130" alt="title">                                   
-                </a>
-                <div class="caption">
-                  <p>By author</p>                                                    
-                </div>                                                                      
-              </div>
-              <div class="info">
-                <h3 class="title">It's very tasty</h3>
-                <p class="description">
-                  Bar single origin grounds java id sweet coffee ristretto. Cream, instant, pumpkin 
-                  spice viennese strong black sweet est decaffeinated mocha.
-                </p>
-                <p><a href="#" class="button-blue">Make project</a>
-              </div>
-            </li>
-          </ul>
-          <p style="clear:left;">
-            Note that this has to <code>clear:left</code> for the thumb view. 
-            Maybe we want to <em class="todo">add a clearfix</em>?
-          </p>
-        </figure>
-      </div>
-    </section>
-    <section>
-      <h2>Gallery page</h2>
-      <p>
-        The gallery page is a bit simpler. Some of the CSS <em class="todo">looks for a 
-        <code>#gallery</code> container</em> though, which is a bit lame.
-      </p>
-      <div class="decontain container backdrop">
-        <figure id="gallery">
-          <ul class="thumbnails">
-            <li class="span3 threeColumn">                        
-              <div class="thumbnail">                             
-                <a href="#">                             
-                  <img src="http://placehold.it/252x175" alt="">                    
-                </a>                                              
-                <div class="caption">                             
-                  <h5 class="title">I made this!</h5>              
-                  <p>By Some Author</p>                          
-                </div>                                            
-                <a href="#" class="button button-orange">Remix</a>
-              </div>                                              
-            </li>                                                 
-            <li class="span3 threeColumn">                        
-              <div class="thumbnail">                             
-                <a href="#">                             
-                  <img src="http://placehold.it/252x175" alt="">                    
-                </a>                                              
-                <div class="caption">                             
-                  <h5 class="title">I made this!</h5>              
-                  <p>By Some Author</p>                          
-                </div>                                            
-                <a href="#" class="button button-orange">Remix</a>
-              </div>                                              
-            </li>                                                 
-            <li class="span3 threeColumn">                        
-              <div class="thumbnail">                             
-                <a href="#">                             
-                  <img src="http://placehold.it/252x175" alt="">                    
-                </a>                                              
-                <div class="caption">                             
-                  <h5 class="title">I made this!</h5>              
-                  <p>By Some Author</p>                          
-                </div>                                            
-                <a href="#" class="button button-orange">Remix</a>
-              </div>                                              
-            </li>                                                 
-            <li class="span3 threeColumn">                        
-              <div class="thumbnail">                             
-                <a href="#">                             
-                  <img src="http://placehold.it/252x175" alt="">                    
-                </a>                                              
-                <div class="caption">                             
-                  <h5 class="title">I made this!</h5>              
-                  <p>By Some Author</p>                          
-                </div>                                            
-                <a href="#" class="button button-orange">Remix</a>
-              </div>                                              
-            </li>                                                 
-            <li class="span3 threeColumn">                        
-              <div class="thumbnail">                             
-                <a href="#">                             
-                  <img src="http://placehold.it/252x175" alt="">                    
-                </a>                                              
-                <div class="caption">                             
-                  <h5 class="title">I made this!</h5>              
-                  <p>By Some Author</p>                          
-                </div>                                            
-                <a href="#" class="button button-orange">Remix</a>
-              </div>                                              
-            </li>                                                 
-          </ul>  
-        </figure>
-        <p style="clear:left;">
-          The fact that this example is in <code>&lt;figure&gt;</code> tags 
-          <em class="todo">breaks the captions slightly</em>. That's silly and 
-          should be fixed. 
-        </p>
-        <p> 
-          And again, <em class="todo">clearfix</em> needed. 
-        </p>
-        </p>
-      </div>
-    </section>
-  </section>
-
-<!--
-  <section class="container">
-    <h1>Page styles</h1>
-    <p>Let's get in to some page styles.</p>
-    <section>
-      <h2>Hero unit</h2>
-      <div class="row">
-        <div class="hero-unit span10">
-          <hgroup class="large">
-            <h2>Style guides are awesome</h2>
-            <h1>Style guide</h1>
-          </hgroup>
-          <p>Above is a hero-unit div with a large class hgroup with h2 and h1 headers.</p>
-        </div>
-      </div>
-    </section>
-  </section>
--->
-<!-- LiveReload -->
-  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-</body>
+<h1>This space reserved for an actual index page.</h1>
+<p>
+  To see the style guide, <a href="styleguide/">click here</a> if you aren't
+  sent along automatically.
+</p>
