--- a/styleguide/header.html
+++ b/styleguide/header.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Up top</title>
-  <link rel="stylesheet" href="./media/css/sandstone.css">
-  <link rel="stylesheet" href="./media/css/wpm.css">
+  <link rel="stylesheet" href="../media/css/sandstone.css">
+  <link rel="stylesheet" href="../media/css/wpm.css">
   <link href="//www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet" />
   <style>
     #wrapper {
       /* We have to relativize the url for gh-pages, which is lame. */
-      background: #FCF7ED url("./media/img/mozorg-gradient.png") repeat-x 0 0; 
+      background: #FCF7ED url("../media/img/mozorg-gradient.png") repeat-x 0 0; 
     }
     #outer-wrapper {
       border-top: 2px solid white !important;
