--- a/styleguide/nav/nav-about.html
+++ b/styleguide/nav/nav-about.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Site nav for fun and profit</title>
-  <link rel="stylesheet" href="../media/css/sandstone.css">
-  <link rel="stylesheet" href="../media/css/wpm.css">
+  <link rel="stylesheet" href="../../media/css/sandstone.css">
+  <link rel="stylesheet" href="../../media/css/wpm.css">
 </head>
-<body>
+<body id="about">
   <section id="masthead">
     <nav id="nav-main">
       <ul>
@@ -17,7 +17,7 @@
     </nav>
   </section>
   <div class="container">
-    <code>&lt;body&gt;</code>
+    <code>&lt;body id="about"&gt;</code>
   </div>
 </body>
 </html>
