Fixing some validation errors: improperly nested tags and unescaped tags in text.

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -107,9 +107,9 @@
       <p> <a href="https://github.com/mozilla/tabzilla">Tabzilla</a> demands that:
       </p>
       <ol>
-        <li> Background images must not be attached to the <body> element. </li>
-        <li> Absolutely positioned elements must not be positioned relative to the <body> element. </li>
-        <li> An element other than the <body> should add a 2 pixel white border to the top of the page 
+        <li> Background images must not be attached to the &lt;body&gt; element. </li>
+        <li> Absolutely positioned elements must not be positioned relative to the &lt;body&gt; element. </li>
+        <li> An element other than the &lt;body&gt; should add a 2 pixel white border to the top of the page 
              (<code>border-top: 2px solid #fff;</code>)
         </li>
       </ol>
@@ -133,7 +133,7 @@
         <div class="row">
           <div class="span5 backdrop">
             <h3>Current</h3>
-            <code><pre>
+            <pre><code>
   &lt;section id="header"&gt;
     &lt;header id="masthead"&gt;
       &lt;div class="row"&gt;
@@ -142,11 +142,11 @@
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/header&gt;
-  &lt;/section&gt;</pre></code> 
+  &lt;/section&gt;</code></pre> 
           </div>
           <div class="span5 backdrop">
             <h3>Better?</h3>
-            <code><pre>
+            <pre><code>
   &lt;header&gt;
     &lt;div id="masthead"&gt;
       ...
@@ -213,16 +213,16 @@
         <div class="row">
           <div class="span5 backdrop">
             <h3>Current</h3>
-            <code><pre>
+            <pre><code>
   &lt;section id="page-bottom"&gt;
     &lt;footer id="colophon"&gt;
       ...
     &lt;/footer&gt;
-  &lt;/section&gt;</pre></code> 
+  &lt;/section&gt;</code></pre> 
           </div>
           <div class="span5 backdrop">
             <h3>Better?</h3>
-            <code><pre>
+            <pre><code>
   &lt;footer&gt;
     &lt;div id="colophon"&gt;
       ...
