Fixing invalid(?) iframe height/width attributes.

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -119,7 +119,7 @@
       <p> Attach background images to <code>#wrapper</code>. Notice that the background moves down as tabzilla opens. 
       </p>
       <figure>
-        <iframe src="wrappers.html" width="100%" height="300px"></iframe>
+        <iframe src="wrappers.html" height="300"></iframe>
         <figcaption><a href="wrappers.html">Click here</a> to see the example by itself.</figcaption>
       </figure>
     </section>
@@ -165,7 +165,7 @@
         actually in place. There shouldn't be a gray dividing line.
       </p>
       <figure>
-        <iframe src="header.html" width="100%" height="300px"></iframe>
+        <iframe src="header.html" height="300"></iframe>
         <figcaption><a href="header.html">Click here</a> to see the example by itself.</figcaption>
       </figure>
     </section>
@@ -233,7 +233,7 @@
       </figure>
       
       <figure class="pt">
-        <iframe src="footer.html" width="100%" height="300px"></iframe>
+        <iframe src="footer.html" height="300"></iframe>
         <figcaption><a href="footer.html">Click here</a> to see the example by itself.</figcaption>
       </figure>
     </section>
@@ -246,7 +246,7 @@
         javascriptier could have been done.
     </p>
     <figure>
-      <iframe src="nav/nav-home.html" width="100%" height="300px"></iframe>
+      <iframe src="nav/nav-home.html" height="300"></iframe>
       <figcaption><a href="nav/nav-home.html">Click here</a> to see the example by itself.</figcaption>
     </figure>
   </section>
@@ -404,7 +404,6 @@
         </p>
         <p> 
           And again, <em class="todo">clearfix</em> needed. 
-        </p>
         </p>
       </div>
     </section>
