Short section on (lack of) responsive design.

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -409,6 +409,16 @@
     </section>
   </section>
 
+  <section class="container divider">
+    <h1>Responsive?</h1>
+    <p><em class="todo">Non.</em></p>
+    <p>
+      Sandstone seems to have the Less Framework responsive breakpoints in there, but 
+      has them totally disabled. I kind of like Bootstrap's approach better anyway, 
+      which gives you a lot more for free if it works out. 
+    </p>
+  </section>
+
 <!--
   <section class="container">
     <h1>Page styles</h1>
